Se elimina AsyncTask y se implementa LiveData para la gestión en BD de forma sincronizada (Solo para guardar carro) Se actualizan las dependencias de Room y se agregan las de lifecycle.

--- a/presentacion/src/main/res/values/strings.xml
+++ b/presentacion/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ADN</string>
+    <string name="guardado_exitoso">Vehiculo guardado con éxito!!</string>
 </resources>
