--- a/presentacion/src/main/res/values/strings.xml
+++ b/presentacion/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ADN</string>
     <string name="guardado_exitoso">Vehiculo guardado con éxito!!</string>
     <string name="eliminado_exitoso">Vehiculo eliminado con éxito!!</string>
+    <string name="cobrar_parqueadero">Cobrar</string>
 </resources>
